fix width on mobile web

--- a/src/components/display/protal/model.css
+++ b/src/components/display/protal/model.css
@@ -21,8 +21,9 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  overflow-y: auto;
-  overflow-x: hidden;
+  /* overflow-y: auto;
+  overflow-x: auto; */
+  overflow: auto;
 }
 
 
